--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -282,3 +282,9 @@ body {
   width: 150px;
   background-image: url('../../public/images/image-placeholder.png');
 }
+
+.ellipsis {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
